Added Flags, Flags Config, MainGUI, FlagGUI and a lot!